--- a/views/template.templ
+++ b/views/template.templ
@@ -11,7 +11,6 @@ templ indexLayout() {
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<meta name="htmx-config" content='{ "responseHandling":[{"code":"422", "swap": true}] }' />
 			<link href="/static/css/output.css" rel="stylesheet"/>
-			<script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 			<script src="https://unpkg.com/htmx.org@2.0.4"></script>
 			<script src="https://unpkg.com/hyperscript.org@0.9.14"></script>
 			<style>
@@ -21,15 +20,27 @@ templ indexLayout() {
 			}
 			</style>
 		</head>
-		<body class="flex-wrap flex content-center justify-between flex-col"
-		>
-			<nav class="w-full flex flex-row-reverse absolute m-3" style="top: 0; right: 0;">
+		<body class="flex-wrap flex content-center justify-between flex-col" hx-boost="true" hx-push-url="true" hx-target="this">
+			<nav class="w-full flex justify-between flex-row absolute p-3" style="top: 0;">
+				<div>
+					<a href="/" class="mr-3"><b>index</b></a>
+					<a href="/sobre"><b>Sobre</b></a>
+				</div>
 				<a href="/login"><b>Login</b></a>
 			</nav>
 			<main class="m-auto">
 				{ children... }
 			</main>
 			<footer></footer>
+			<script>
+			// hx-boost não funciona sem isso.
+			// esse não deveria ser o caso.
+			document.body.addEventListener('htmx:beforeSwap', (e) => {
+				if (e?.detail?.boosted) {
+					e.detail.shouldSwap = true;
+				}
+			});
+			</script>
 		</body>
 	</html>
 }
@@ -47,7 +58,7 @@ templ Login() {
 			@loginTextInput("E-Mail", "email", "email", "Insira seu e-mail...")
 			@loginTextInput("Senha", "senha", "password", "Insira sua senha...")
 			@errorTarget()
-			<form id="form1" hx-post="/login " hx-trigger="submit" script={toggleButtonInMeUntilLoad} >
+			<form id="form1" hx-post="/login " hx-trigger="submit" script={toggleButtonInMeUntilLoad} hx-boost="true">
 				<button class="btn" type="submit">
 					Entrar
 				</button>
@@ -109,6 +120,11 @@ templ Logged(usuario *database.Usuario) {
 				<a href="/logout">logout</a>
 			</p>
 		</div>
+	}
+}
+templ Sobre() {
+	@indexLayout() {
+		<p>Sobre:</p>
 	}
 }
 
