--- a/views/template.templ
+++ b/views/template.templ
@@ -145,7 +145,7 @@ templ ErrorBox(msg string) {
 		</p>
 
 		<button class="flex items-center justify-center transition-all w-8 h-8 rounded-md text-white hover:bg-white/10 active:bg-white/10 absolute top-1.5 right-1.5" type="button"
-			_='on click remove closest <div[role="alert"]/>'
+			_='on click tell closest <div[role="alert"]/> transition opacity to 0 then remove yourself end'
 		>
 			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-5 w-5" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path></svg>
 		</button>
