Lidar erro de conexão quando servidor está offline

--- a/views/template.templ
+++ b/views/template.templ
@@ -40,6 +40,9 @@ templ indexLayout() {
 					e.detail.shouldSwap = true;
 				}
 			});
+			document.body.addEventListener('htmx:sendError', (e) => {
+				alert('falha ao conectar com servidor!')
+			});
 			</script>
 		</body>
 	</html>
