Status 200 fazer swap

--- a/views/main.templ
+++ b/views/main.templ
@@ -7,7 +7,7 @@ templ IndexLayout() {
 			<title>Mude meu título!</title>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
-			<meta name="htmx-config" content='{ "responseHandling":[{"code":"422", "swap": true}] }' />
+			<meta name="htmx-config" content='{ "responseHandling":[{"code":"422", "swap": true}, {"code":"200", "swap": true}] }' />
 			<link href="/static/css/output.css" rel="stylesheet"/>
 			<script src="https://unpkg.com/htmx.org@2.0.4"></script>
 			<script src="https://unpkg.com/hyperscript.org@0.9.14"></script>
@@ -31,13 +31,6 @@ templ IndexLayout() {
 			</main>
 			<footer></footer>
 			<script>
-			// hx-boost não funciona sem isso.
-			// esse não deveria ser o caso.
-			document.body.addEventListener('htmx:beforeSwap', (e) => {
-				if (e?.detail?.boosted) {
-					e.detail.shouldSwap = true;
-				}
-			});
 			document.body.addEventListener('htmx:sendError', (e) => {
 				alert('falha ao conectar com servidor!')
 			});
